Fix the color on ie and edge

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@
 
 body {
 	font: 400 16px/1.1 'Roboto', 'Arial', 'Helvetica', sans-serif;
-	background: #fff;
-	color: #000;
+	background: rgb(255, 255, 255);
+	color: rgb(0, 0, 0);
 	margin: 0;
 }
 
@@ -34,7 +34,7 @@ h2,
 h3,
 a,
 p {
-	color: #fff;
+	color: rgb(255, 255, 255);
 }
 
 ul {
@@ -91,7 +91,7 @@ header>.content {
 
 .logo>a {
 	font-family: 'Open Sans', sans-serif;
-	color: #00e0d0;
+	color: rgb(0, 224, 208);
 	font-size: 1.5rem;
 	padding: 0 0.3rem;
 }
@@ -103,7 +103,7 @@ header>.content {
 
 .fas.fa-align-justify,
 .main-nav>li>a {
-	color: #fff;
+	color: rgb(255, 255, 255);
 	-webkit-transition: color 0.3s ease-in-out;
 	-o-transition: color 0.3s ease-in-out;
 	transition: color 0.3s ease-in-out;
@@ -128,7 +128,7 @@ nav {
 .main-nav>li>a:hover,
 .fas.fa-align-justify:hover,
 .bottom-nav>ul>li>a:hover {
-	color: #00e0d0;
+	color: rgb(0, 224, 208);
 }
 
 .main-banner {
@@ -153,7 +153,7 @@ nav {
 	margin: 1.5rem auto 0;
 	width: 50px;
 	height: 1px;
-	background-color: #00e0d0;
+	background-color: rgb(0, 224, 208);
 	z-index: 1;
 }
 
@@ -163,10 +163,10 @@ nav {
 
 .blue-button {
 	border-width: 1px;
-	border-color: #00e0d0;
+	border-color: rgb(0, 224, 208);
 	border-style: solid;
 	border-radius: 2px;
-	color: #00e0d0;
+	color: rgb(0, 224, 208);
 	padding: 0.5rem 1.3rem;
 	text-transform: uppercase;
 	background-color: transparent;
@@ -174,9 +174,8 @@ nav {
 }
 
 .blue-button:hover {
-	background-color: #00e0d01a;
 	background-color: rgba(0, 224, 208, 0.102);
-	border-color: #fff;
+	border-color: rgb(255, 255, 255);
 }
 
 .dot-nav {
@@ -202,7 +201,7 @@ nav {
 	height: 8px;
 	text-indent: -999rem;
 	border-width: 1px;
-	border-color: #c2c2c2;
+	border-color: rgb(194, 194, 194);
 	border-style: solid;
 	border-radius: 50%;
 	display: inline-block;
@@ -212,8 +211,8 @@ nav {
 /*.active-dot*/
 
 {
-	background-color: #00e0d0;
-	border-color: #00e0d0;
+	background-color: rgb(0, 224, 208);
+	border-color: rgb(0, 224, 208);
 	width: 10px;
 	height: 10px;
 }
@@ -230,7 +229,7 @@ nav {
 }
 
 .our-story>p {
-	color: #413d4b;
+	color: rgb(65, 61, 75);
 	margin: 1.5rem 0;
 }
 
@@ -244,7 +243,7 @@ nav {
 .our-works>h2,
 .contact-form-wrap>h2,
 .our-clients-wrap>h2 {
-	color: #413d4b;
+	color: rgb(65, 61, 75);
 	text-transform: uppercase;
 }
 
@@ -278,16 +277,14 @@ nav {
 	-webkit-transform: scale(1.1);
 	-ms-transform: scale(1.1);
 	transform: scale(1.1);
-	background-color: #00e0d01a;
 	background-color: rgba(0, 224, 208, 0.102);
 }
 
 .section-head>p {
-	color: #2f2d35;
+	color: rgb(46, 44, 52);
 }
 
 .card {
-	border-bottom: 2px solid #00000011;
 	border-bottom: 2px solid rgba(0, 0, 0, 0.067);
 	margin: 2rem 0;
 }
@@ -297,7 +294,7 @@ nav {
 }
 
 .card>a>p {
-	color: #333;
+	color: rgb(51, 51, 51);
 }
 
 .card>a>img {
@@ -326,7 +323,7 @@ nav {
 	margin: 1.5rem auto 1.5rem;
 	width: 50px;
 	height: 2px;
-	background-color: #413d4b;
+	background-color: rgb(65, 61, 75);
 	opacity: 0.302;
 	z-index: 1;
 }
@@ -343,15 +340,15 @@ nav {
 }
 
 .reverse-color>h2 {
-	color: #fff;
+	color: rgb(255, 255, 255);
 }
 
 .reverse-color>p {
-	color: #f9f9f9;
+	color: rgb(249, 249, 249);
 }
 
 .section-head.reverse-color::after {
-	background-color: #f9f9f9;
+	background-color: rgb(249, 249, 249);
 }
 
 .employee-cards.wrap-col {
@@ -362,13 +359,11 @@ nav {
 
 .employee-card>a {
 	display: block;
-	border: 1px solid #ffffff6c;
 	border: 1px solid rgba(255, 255, 255, 0.424);
 	margin: 2.5rem auto 2rem;
 }
 
 .employee-card>a:hover {
-	background-color: #00e0d01a;
 	background-color: rgba(0, 224, 208, 0.102);
 }
 
@@ -404,7 +399,7 @@ nav {
 }
 
 .our-works>a {
-	color: #413d4b;
+	color: rgb(65, 61, 75);
 }
 
 .our-works>a:hover {
@@ -420,7 +415,7 @@ nav {
 }
 
 .right-arrow {
-	border: solid #413d4b;
+	border: solid rgb(65, 61, 75);
 	border-width: 0 1px 1px 0;
 	display: inline-block;
 	padding: 3px;
@@ -474,7 +469,6 @@ nav {
 
 .quotation {
 	margin: 0;
-	color: #f9f9f9b4;
 	color: rgba(249, 249, 249, 0.706);
 }
 
@@ -487,7 +481,6 @@ nav {
 .who-is-who>h3,
 .who-is-who>p {
 	margin: 0.3rem 0;
-	color: #f9f9f9e1;
 	color: rgba(249, 249, 249, 0.882);
 }
 
@@ -580,7 +573,7 @@ nav {
 
 .in-field.text-area {
 	height: 10rem;
-	color: #000;
+	color: rgb(0, 0, 0);
 	resize: none;
 	font-family: inherit;
 }
@@ -682,10 +675,8 @@ footer>.content>* {
 .email-form>input {
 	margin-right: 0.3rem;
 	width: calc(100% - 4.5rem);
-	color: #ffffffbf;
 	color: rgba(255, 255, 255, 0.749);
 	background-color: transparent;
-	border-color: #ffffff88;
 	border-color: rgba(255, 255, 255, 0.533);
 	border-top: 1px solid;
 	;
@@ -700,8 +691,6 @@ footer>.content>* {
 .email-form>button {
 	font-family: "Font Awesome 5 Solid";
 	font-size: 1rem;
-	background-color: #ffffff81;
-	border: 1px #ffffff54 solid;
 	background-color: rgba(255, 255, 255, 0.506);
 	border: 1px rgba(255, 255, 255, 0.329) solid;
 	outline: none;
@@ -728,13 +717,12 @@ footer>.content>* {
 	padding: 20px;
 	width: 1.5rem;
 	height: 1.5rem;
-	border: 1px solid #fff;
+	border: 1px solid rgb(255, 255, 255);
 	border-radius: 50%;
 	margin: 0.5rem 0.5rem 0 0;
 }
 
 .social-media>li>a:hover {
-	background-color: #00e0d01a;
 	background-color: rgba(0, 224, 208, 0.102);
 }
 
@@ -853,7 +841,6 @@ footer>.content>* {
 		border-right: none;
 		border-top: none;
 		border-left: none;
-		border-color: #00000010;
 		border-color: rgba(0, 0, 0, 0.063);
 	}
 	.card:nth-child(even) {
@@ -861,7 +848,6 @@ footer>.content>* {
 		border-bottom: 1px solid;
 		border-top: none;
 		border-right: none;
-		border-color: #00000010;
 		border-color: rgba(0, 0, 0, 0.063);
 	}
 	.card:nth-child(5),
@@ -959,7 +945,6 @@ footer>.content>* {
 		border-bottom: 1px solid;
 		border-top: none;
 		border-right: none;
-		border-color: #00000010;
 		border-color: rgba(0, 0, 0, 0.063);
 	}
 	.card:nth-last-child(-n+3) {
